# haskell-tetris

./: .gitignore  README.md  htetris.cabal  stack-lts-14.yaml  stack-lts-15.yaml  stack-lts-16.yaml  stack-nightly.yaml
.github/workflows/: cabal.yml  lint.yml  stack.yml
app/: Main.hs
src/: Main.hs  Tetris.hs  TetrisCurses.hs
