cabal-version: 2.4
name:          htetris
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Haukur Rosinkranz & Christophe Vilain
maintainer:    hauxir@gmail.com
category:      Game
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.3 || ==8.10.1

executable htetris
  main-is:          Main.hs
  other-modules:
    Tetris
    TetrisCurses

  build-depends:
    , base       >=4.12 && <4.15
    , directory  ^>=1.3
    , ncurses    ^>=0.2
    , random     ^>=1.1

  hs-source-dirs:   src
  ghc-options:
    -O2 -Wall -Werror -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  default-language: Haskell2010
