cabal-version: 2.4
name:          htetris
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        Haukur Rosinkranz & Christophe Vilain
maintainer:    hauxir@gmail.com
category:      Game
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.4 || ==8.10.2

common common
  build-depends:    base >=4.12 && <4.15
  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , ncurses  ^>=0.2
    , random   >=1.1 && <1.3

  -- cabal-fmt: expand src
  exposed-modules:
    Tetris
    TetrisCurses

executable htetris
  import:        common
  main-is:       app/Main.hs
  build-depends:
    , directory  ^>=1.3
    , htetris

  ghc-options:   -O2
